# TokenWise

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/tokenwise/: __init__.py  __main__.py  config.py  core.py  utils.py
src/tokenwise/data/: model_pricing.v1.json
tests/: test_core.py
